# hik-net-sdk

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.cargo/: config.toml
examples/: web_index.html  web_server.rs
include/: DataType.h  DecodeCardSdk.h  HCNetSDK.h
src/: common.rs  device.rs  lib.rs
